--- a/src/style.scss
+++ b/src/style.scss
@@ -84,3 +84,21 @@ $__mobile__size: 850px;
 .bg-1{
     background-color: #F7FAFC;
 }
+.bg-2{
+    background-color: #F7F8FA;
+}
+
+
+.no-margin{
+    margin:0;
+}
+.dividing-line{
+    height: 0;
+    width: 100%;
+    border: 1px solid rgba(120,131,152,0.20);
+}
+.dividing-line2{
+    height: 0;
+    width: 100%;
+    border: 1px solid #E4E4E4;
+}
